@@ -21,14 +21,17 @@
 #include "common.h"
 #include "Obstacle.h"
 
+
 class SceneRenderer;
 class World;
 class ShotPath;
+class ResourceDatabase;
+
 
 class RadarRenderer {
   public:
 			RadarRenderer(const SceneRenderer&,
-						const World& world);
+						const World& world, ResourceDatabase *resources);
 			~RadarRenderer();
 
 	void		setControlColor(const GLfloat *color = NULL);
